Update execution count and fix print statement in index.ipynb

--- a/index.ipynb
+++ b/index.ipynb
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
+      "The history saving thread hit an unexpected error (OperationalError('unable to open database file')).History will not be written to the database.\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
     "\n",
     "actual_counts = y_test.value_counts()\n",
     "predicted_counts = pd.Series(y_pred).value_counts()\n",
-    "df_counts = pd.DataFrame({'Actual': actual_counts, 'Predicted': predicted_counts})"
+    "df_counts = pd.DataFrame({'Actual': actual_counts, 'Predicted': predicted_counts})\n"
    ]
   },
   {
@@ -265,7 +265,7 @@
     "plt.show()\n",
     "\n",
     "print(\"Accuracy:\", accuracy)\n",
-    "print(\"Confusion Matrix:\\n\", conf_matrix)"
+    "print(\"Confusion Matrix:\\n\", conf_matrix)\n"
    ]
   },
   {
@@ -310,7 +310,7 @@
     "# Example usage\n",
     "input_message = \"Hi, how are you doing\"\n",
     "prediction = classify_message(model, vectorizer, input_message)\n",
-    "print(f\"The message is classified as: {prediction}\")"
+    "print(f\"The message is classified as: {prediction}\")\n"
    ]
   }
  ],
